Trello #334 Discourse theme - align with latest tagged Discourse version: colors fix phase 1: make sure there are no undefined Sass variable errors

--- a/assets/stylesheets/common/components/buttons.scss
+++ b/assets/stylesheets/common/components/buttons.scss
@@ -19,10 +19,10 @@
 // --------------------------------------------------
 
 .btn-primary {
-  background-color: $btn-primary-background-color;
+  background-color: $red-SP;
   color: #fff;
 
   &:hover {
-    background-color: $btn-primary-background-color-dark;
+    background-color: $red-darker-SP;
   }
 }
