--- a/assets/stylesheets/desktop/topic.scss
+++ b/assets/stylesheets/desktop/topic.scss
@@ -6,7 +6,7 @@
 
 
 .post-info a {
-  color: $black;
+  color: $primary;
 }
 
 
@@ -38,7 +38,7 @@ a.reply-new {
   left: 425px;
 
   .nums {
-    color: $black;
+    color: $primary;
   }
 
   button {
